fit_predictor/mkp_aco/evaluates/run14/2025-01-27_08-27-23/evaluations/problem_eval8869996106404956383_stdout.txt
Traceback (most recent call last):
  File "E:\Projects\CO\reevo-main/problems/mkp_aco/eval.py", line 8, in <module>
    import gpt
  File "E:\Projects\CO\reevo-main\problems\mkp_aco\gpt.py", line 4
    {Select items for inclusion based on the maximum cumulative ratio of prize to a weighted sum of item-specific weights, with each item's weight contributing equally to the sum across all dimensions.}
                                                                                                                                         ^
SyntaxError: unterminated string literal (detected at line 4)
